# queens

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  dev-requirements.in  dev-requirements.txt  environment.yml  pyproject.toml  requirements.in  requirements.txt  tutorial-requirements.in  tutorial-requirements.txt
.github/: dependabot.yml  pull_request_template.md  xml_summaries_to_md.py
.github/actions/create_python_environment/: action.yml
.github/actions/run-pytest-suite/: action.yml
.github/actions/setup-queens-pixi/: action.yml
.github/workflows/: build_documentation.yml  code_quality.yml  local_testsuite.yml  test_pypi_build.yml  tests_local.yml  update_dependencies.yml  update_pixi_lock.yml
.gitlab/: .gitlab-ci.yml
.gitlab/issue_templates/: ONBOARDING.md
.gitlab/pipeline_utils/: .licenserc_template.yaml
doc/: README.md
doc/source/: conf.py  faq.md  index.rst  tutorials.rst
doc/source/_ext/: create_documentation_files.py
doc/source/_static/: collapse_output.js  custom.css
doc/source/faq/: directories.md  requirements.md
doc/source/faqs/: requirements.md
doc/source/tutorials/: 0-onboarding.rst
queens/iterators/: sobol_index.py
queens/parameters/: parameters.py
src/example_simulator_functions/: README.md  __init__.py  executable_park91a_hifi_on_grid_with_gradients.py
src/queens/: global_settings.py  main.py
src/queens/data_processors/: __init__.py  _data_processor.py  csv_file.py  numpy_file.py  txt_file.py
src/queens/distributions/: __init__.py  _distribution.py  bernoulli.py  beta.py  categorical.py  exponential.py  free_variable.py  lognormal.py  loguniform.py  mean_field_normal.py  mixture.py  multinomial.py  normal.py  particle.py  truncated_normal.py  uniform.py  uniform_discrete.py
src/queens/drivers/: __init__.py  _driver.py  function.py  jobscript.py  mpi.py
src/queens/iterators/: __init__.py  _variational_inference.py  adaptive_sampling.py  bbvi.py  classification.py  hamiltonian_monte_carlo.py  latin_hypercube_sampling.py  least_squares.py  metropolis_hastings.py  metropolis_hastings_pymc.py  nuts.py  optimization.py  polynomial_chaos.py  rpvi.py  sequential_monte_carlo.py  sobol_index.py  sobol_index_gp_uncertainty.py  sobol_sequence.py
src/queens/models/: __init__.py  adjoint.py  bmfmc.py  finite_difference.py  logpdf_gaussian_process.py  simulation.py
src/queens/parameters/: parameters.py
src/queens/schedulers/: __init__.py  _cluster_base.py  _dask.py  _scheduler.py  cluster.py  cluster_local.py  local.py  pool.py
src/queens/stochastic_optimizers/: __init__.py  adamax.py  rms_prop.py  sgd.py
src/queens/utils/: ascii_art.py  classifier.py  cli.py  collection.py  config_directories.py  configure_tensorflow.py  exceptions.py  experimental_data_reader.py  fd_jacobian.py  from_config_create.py  gpflow_transformations.py  imports.py  injector.py  io.py  iterative_averaging.py  jax_minimize_wrapper.py  logger_settings.py  mcmc.py  metadata.py  numpy_array.py  numpy_linalg.py  path.py  pdf_estimation.py  plot_outputs.py  pool.py  ports.py  printing.py  process_outputs.py  random_process_scaler.py  remote_build.py  remote_operations.py  rsync.py  run_subprocess.py  scaling.py  sequential_monte_carlo.py  sobol_sequence.py  start_dask_cluster.py  valid_options.py
src/queens/variational_distributions/: __init__.py  _variational_distribution.py  full_rank_normal.py  joint.py  mean_field_normal.py  mixture_model.py  particle.py
src/queens_interfaces/: __init__.py
src/queens_interfaces/fourc/: README.md  __init__.py  driver.py  fourc_requirements.txt  random_material_preprocessor.py
test_utils/: get_queens_example_from_readme.py  integration_tests.py  path.py  tutorial_tests.py
tests/: README.md  conftest.py
tests/integration_tests/: conftest.py
tests/integration_tests/cluster/: test_cluster.py  test_dask_cluster.py  test_fourc_mc_cluster.py
tests/integration_tests/cluster_local/: __init__.py  test_cluster_local.py
tests/integration_tests/fourc/: conftest.py  test_fourc_mc.py  test_fourc_mc_random_material_field.py
tests/integration_tests/iterators/: conftest.py  test_bbvi.py  test_bmfia.py  test_bmfmc.py  test_classification.py  test_data.py  test_elementary_effects.py  test_grid.py  test_hamiltonian_monte_carlo.py  test_heteroskedastic_gaussian_process.py  test_latin_hypercube_sampling.py  test_least_squares.py  test_metropolis_hastings.py  test_metropolis_hastings_pymc.py  test_monte_carlo.py  test_nuts.py  test_optimization.py  test_points.py  test_polynomial_chaos.py  test_reinforcement_learning.py  test_rpvi.py  test_sequential_monte_carlo.py  test_sequential_monte_carlo_chopin.py  test_sobol_index.py  test_sobol_index_gp_uncertainty.py
tests/integration_tests/models/: conftest.py  test_gaussian_bayesian_neural_network.py  test_gaussian_neural_network.py  test_gaussian_process.py  (+3 more)
tests/tutorial_tests/: test_1_grid_iterator_rosenbrock.py  test_2_uncertainty_propagation_and_quantification.py  test_tutorials.py  tutorial_tests_markers.py
tools/dependencies/: check_pyproject_dependency_integrity.py  diff_pyproject_dependency_declarations.py
tutorials/: 1-grid-iterator-rosenbrock.ipynb  1_grid_iterator_rosenbrock.ipynb  2-grid-iterator-rosenbrock.ipynb  2-uncertainty-propagation-and-quantification.ipynb  2_uncertainty_propagation_and_quantification.ipynb  utils.py
tutorials/1-grid-iterator-rosenbrock/: 1-grid-iterator-rosenbrock.ipynb
tutorials/3-orchestrating-4C-simulations-with-QUEENS/: 3_orchestrating_4C_simulations_with_QUEENS.ipynb  experimental_data.py  template.4C.yaml  utils.py
tutorials/3_orchestrating_4c_simulations/: 3_orchestrating_4c_simulations.ipynb  experimental_data.py  input_template.4C.yaml  plot_results.py  utils.py
tutorials/4_quantifying_uncertainty_due_to_heterogeneous_material_fields/: 4_quantifying_uncertainty_due_to_heterogeneous_material_fields.ipynb  plot_input_random_field.py  random_field.py
tutorials/5_grid_iterator_4c_remote/: 5_grid_iterator_4c_remote.ipynb  solid_runtime_hex8.4C.yaml
(+63 files in other folders)
