[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Basic project data
[project]
name = "queens"
authors = [{ name = "QUEENS developers" }]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
description = "A general purpose framework for Uncertainty Quantification, Physics-Informed Machine Learning, Bayesian Optimization, Inverse Problems and Simulation Analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=81.0.0,<82",
    "numba>=0.65.0",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "dask-jobqueue>=0.9.0",
    "fabric>=3.2.3",
    "xarray>=2026.4.0",
    "pydoe>=0.9.9",
    "salib>=1.5.2",
    "vtk>=9.5.0",
    "pyvista>=0.47.3",
    "chaospy>=4.3.20",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "arviz>=0.23.4,<1",
    "gpflow",
    "tensorflow>=2.18.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.18.0",
    "jax>=0.5.2",
    "pymc>=5.28.4",
    "stable-baselines3>=2.8.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.6.0",
    "tqdm>=4.67.3",
    "pathos>=0.3.5",
    "gnuplotlib>=0.46",
    "diversipy>=0.9",
    "particles @ git+https://github.com/nchopin/particles.git",
    "scikit-activeml>=1.0.0",
]
keywords = [
    "gaussian processes",
    "uncertainty quantification",
    "inverse analysis",
    "optimization",
    "sensitivity analysis",
    "multi-fidelity",
    "bayesian inference",
]

[tool.setuptools.dynamic]
version = { attr = "queens.__VERSION__" }

# cli utils
[project.scripts]
queens = "queens.main:main"
queens-inject-template = "queens.utils.cli_utils:inject_template_cli"
queens-print-pickle = "queens.utils.cli_utils:print_pickle_data_cli"
queens-input-to-script = "queens.utils.cli_utils:input_to_script_cli"
queens-build-html-coverage-report = "queens.utils.cli_utils:build_html_coverage_report"
queens-remove-html-coverage-report = "queens.utils.cli_utils:remove_html_coverage_report"
queens-export-metadata = "queens.utils.cli_utils:gather_metadata_and_write_to_csv"

# urls
[project.urls]
Homepage = "https://www.queens-py.org"
Documentation = "https://queens-py.github.io/queens"
Repository = "https://github.com/queens-py/queens.git"
Issues = "https://github.com/queens-py/queens/issues"
Changelog = "https://github.com/queens-py/queens/blob/main/CHANGELOG.md"

# Tools section
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
use_parentheses = true
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = true

[tool.ruff.lint]
select = ["D"]    # pydocstyle rules
ignore = ["D104"] # Missing docstring in public package
exclude = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = '-m "unit_tests or integration_tests" --doctest-modules --doctest-continue-on-failure --doctest-ignore-import-errors'
testpaths = ["tests"]
pythonpath = ["test_utils"]
markers = [
    "benchmark: Benchmark tests, involving full QUEENS-iterator runs for performance benchmarks (excluded from the main pipeline)",
    "convergence_tests: Convergence tests with higher sample counts or tighter analytical references",
    "integration_tests: Integration tests with Python interface",
    "unit_tests: Unit tests",
    "tutorial_tests: Tutorial tests that require no specialized tutorial resources",
    "tutorial_tests_fourc: Tutorial tests that require fourc",
    "tutorial_tests_remote: Tutorial tests that require remote execution resources",
    "integration_tests_fourc: Integration tests with fourc",
    "lnm_cluster: Integration tests with LNM clusters (require access to LNM network)",
    "imcs_cluster:  Integration tests with LNM clusters (require access to IMCS network)",
    "max_time_for_test(time_in_seconds):  Maximum time this test should take (if exceeded and used with '--test-timing' an error is raised)",
]

[tool.coverage.run]
source = ["src"]
parallel = true
branch = true
relative_files = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",           # Have to re-enable the standard pragma
    "if __name__ == .__main__.:", # Don't complain if non-runnable code isn't run
]
show_missing = false

[tool.coverage.html]
directory = "html_coverage_report"

[tool.pip-licenses]
from = "mixed"
ignore-packages = [
    # cons is under LGPL-3
    "cons",
    # queens (this library) is under a LGPL-3-or-later
    "queens",
    # fourcipp is under MIT
    "fourcipp",
    # scikit-activeml is under BSD 3-Clause License
    "scikit-activeml",
    # namex is under Apache 2.0 see https://github.com/fchollet/namex?tab=License-1-ov-file
    "namex",
    # miniKanren is under a BSD-3-Clause (sligthly modified a,b,c instead of 1.,2.,3. see https://github.com/pythological/kanren/blob/main/LICENSE.txt
    "miniKanren",
    # vtk is under BSD-3-Clause see https://gitlab.kitware.com/vtk/vtk/-/blob/master/Copyright.txt?ref_type=heads
    "vtk",
    # torch is under BSD-3-Clause
    "torch",
    # PySide6 is under (LGPLv3 or GPLv2 or GPLv3) see https://code.qt.io/cgit/pyside/pyside-setup.git/tree/README.pyside6.md
    "PySide6",
    # shiboken6 is under (LGPLv3 or GPLv2 or GPLv3) see https://code.qt.io/cgit/pyside/pyside-setup.git/tree/README.pyside6.md
    "shiboken6",
]
allow-only="MIT;MIT License;MIT-CMU;BSD;BSD License;BSD-2-Clause;BSD-3-Clause;BSD 3-Clause;3-Clause BSD License;BSD-2-Clause AND Apache-2.0 WITH LLVM-exception;BSD-3-Clause AND 0BSD AND MIT AND Zlib AND CC0-1.0;Apache-2.0;Apache License 2.0;Apache Software License;Apache-2.0 OR BSD-3-Clause;Apache-2.0 OR BSD-2-Clause;Apache-2.0 AND CNRI-Python;Apache-2.0 AND MIT;ISC;PSF-2.0;Python Software Foundation License;MPL-2.0;Mozilla Public License 2.0;Mozilla Public License 2.0 (MPL 2.0);MPL-2.0 AND MIT;LGPL;LGPL-2.1;LGPL-3.0;LGPL-3.0-or-later;Zlib;0BSD;CC0-1.0"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false  # Change to true once all functions are typed
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["str-bytes-safe"]
# Delete modules once type hinting has been introduced there
exclude = '''(?x)(
    ^(.gitlab|.github|config|doc|tests|test_utils)/|
    ^src/(example_simulator_functions|queens_interfaces)/|
    ^src/queens/(data_processors|drivers|iterators|models)/|
    ^src/queens/(schedulers|stochastic_optimizers|visualization)/|
    ^src/queens/(main.py|global_settings.py)
).*$'''
[[tool.mypy.overrides]]
module = ["yaml"]
follow_untyped_imports = true

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.base.dependencies]
python = ">=3.12"
pip = ">=26.0.1"
setuptools = ">=81.0.0,<82"
numba = ">=0.65.0"
numpy = ">=2.4.3"
pandas = ">=3.0.2"
scikit-learn = ">=1.8.0"
scipy = ">=1.17.1"
dask = ">=2026.3.0"
distributed = ">=2026.3.0"
dask-jobqueue = ">=0.9.0"
fabric = ">=3.2.3"
xarray = ">=2026.4.0"
pydoe = ">=0.9.9"
salib = ">=1.5.2"
vtk = ">=9.5.0"
pyvista = ">=0.47.3"
chaospy = ">=4.3.20"
pyyaml = ">=6.0.3"
jinja2 = ">=3.1.6"
arviz = ">=0.23.4,<1"
gpflow = ">=2.9.2"
tensorflow = ">=2.18.0"
tensorflow-probability = ">=0.25.0"
tf-keras = ">=2.18.0"
jax = ">=0.5.2"
pymc = ">=5.28.4"
stable-baselines3 = ">=2.8.0"
matplotlib = ">=3.10.8"
seaborn = ">=0.13.2"
plotly = ">=6.6.0"
tqdm = ">=4.67.3"
pathos = ">=0.3.5"

[tool.pixi.feature.base.pypi-dependencies]
gnuplotlib = ">=0.46"
diversipy = ">=0.9"
particles = { git = "https://github.com/nchopin/particles.git"}
scikit-activeml= ">=1.0.0"

[tool.pixi.feature.base.tasks]
install-editable = "python -m pip install --no-deps --no-build-isolation -e ."

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3"
py = ">=1.11.0"
pytest-codestyle = ">=2.0.1"
pytest-cov = ">=7.1.0"
pytest-mock = ">=3.15.1"
pytest-xdist = ">=3.8.0"
mock = ">=5.2.0"
black = ">=26.3.1"
pylint = ">=4.0.5"
isort = ">=8.0.1"
pre-commit = ">=4.5.1"
pre-commit-hooks = ">=5.0.0"
sphinx = ">=9.1.0"
nbsphinx = ">=0.9.8"
pydata-sphinx-theme = ">=0.17.0"
pandoc = "*"
commitizen = ">=4.13.10"
docformatter = ">=1.7.7"
yamllint = ">=1.38.0"
ruff = ">=0.15.10"
nbstripout = ">=0.9.1"
myst-parser = ">=5.0.0"
testbook = ">=0.4.2"
ipykernel = ">=7.2.0"
mypy = ">=1.20.1"
pip-licenses = ">=5.5"

[tool.pixi.feature.dev.pypi-dependencies]
pylint-exit = ">=1.2.0"
licenseheaders = ">=0.8.8"

[tool.pixi.feature.tutorials.dependencies]
scikit-fem = ">=12.0.1"

[tool.pixi.feature.fourc.dependencies]
[tool.pixi.feature.fourc.pypi-dependencies]
fourcipp = ">=1.91.0"

[tool.pixi.environments]
default = { features = ["base"], no-default-feature = true, solve-group = "default"}
all = { features = ["base","tutorials", "fourc"], no-default-feature = true, solve-group = "default"}
dev = { features = ["base", "dev", "tutorials", "fourc"], no-default-feature = true, solve-group = "default"}

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "py>=1.11.0",
    "pytest-codestyle>=2.0.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "mock>=5.2.0",
    "black>=26.3.1",
    "pylint>=4.0.5",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=5.0.0",
    "sphinx>=9.1.0",
    "nbsphinx>=0.9.8",
    "pydata-sphinx-theme>=0.17.0",
    "pandoc",
    "commitizen>=4.13.10",
    "docformatter>=1.7.7",
    "yamllint>=1.38.0",
    "ruff>=0.15.10",
    "nbstripout>=0.9.1",
    "myst-parser>=5.0.0",
    "testbook>=0.4.2",
    "ipykernel>=7.2.0",
    "mypy>=1.20.1",
    "pip-licenses>=5.5",
    "pylint-exit>=1.2.0",
    "licenseheaders>=0.8.8",
]

[project.optional-dependencies]
tutorials =["scikit-fem>=12.0.1"]
fourc = ["fourcipp>=1.91.0"]
all = ["queens[fourc]", "queens[tutorials]"]
